@@ -11,7 +11,7 @@ String generatorName = "spigot-1.21.4"
 tasks.register("runDataGen", JavaExec) {
     group = "build"
     mainClass = "org.cdc.spigotgen.datagent.Datagen"
-    classpath = project(":MCreatorSpigot1214").sourceSets.main.runtimeClasspath
+    classpath = project.sourceSets.main.runtimeClasspath
 }
 
 tasks.register("downloadClient", Download) {
@@ -61,21 +61,6 @@ tasks.jar {
     from {
         configurations.export.collect { it.isDirectory() ? it : zipTree(it) }
     }
-}
-
-tasks.register('runMCreatorWithPlugin', JavaExec) {
-    dependsOn jar
-
-    environment("MCREATOR_PLUGINS_FOLDER", file("./build/libs"))
-    environment("MCREATOR_PLUGINS_DEV", "")
-
-    jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
-
-    classpath = project(':MCreator').sourceSets.main.runtimeClasspath
-
-    main = 'net.mcreator.Launcher'
-
-    workingDir = mcreator_path
 }
 
 subprojects { subproject ->
